fix plex deployment

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:cZ4irgFP111dellM9JW9fKwCzCsp0IXBiC3rB+TqKLJCHeIDHepYwycqyfAkGQfaEAbEFCOI20K9Mnf8GuE+MRw=,iv:JeUS+HkCCN2eOKwBnLHEoLev/dOOD31TAmV0wXbCVcQ=,tag:6oGGBDM9ob7PMATA5uit3g==,type:comment]
-#ENC[AES256_GCM,data:xVSx4vj5Wz97VhIpFBEqNGVqFhj360j1F9zO5V1gH7+Vy8uRF1L5tdsBXuA=,iv:a85g7/ew6C1QR6NwHdianf3Iyw5x/VFL54q7SqljCqI=,tag:+IjMIs/k+8HNjFH5hmq9RQ==,type:comment]
-VIP: ENC[AES256_GCM,data:xDT3u3gF24WaqOCyqA==,iv:c5oGuXP39n9jc09FUCBzVrOmQfmaQCO3R+HGNPpASd4=,tag:UcGVnWgBzOsu/lrAx9EzTA==,type:str]
-#ENC[AES256_GCM,data:FbgvBYJRZyL9z/kwTMkpaIozjGBzp9JVEty3,iv:A8DHl/S9btRmCOn1OK5YND+fr4Ya7JcGNDITKk62+FE=,tag:9EQP0+o1TO154Z6aPt+kBg==,type:comment]
-#ENC[AES256_GCM,data:ScOepaPNeUjlMgq3DFwDZPUMf0u75k6o3wrQOTDJ1TbVlHp9MJA+VZfE98JdOUd4CuByXed1beR+UqYAeREkxtnn0Zmj61WJ87iMXCAzyheqziIqcxMGNHI=,iv:1HZOkge1CSL1AA6eycUV9x2Zmk8bCx2FsxseKZ9TFFg=,tag:OerDatyK7x3hrmlsJQsfLA==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:uBeU2/0k2lmB8wcHx6c=,iv:EUQwR3AhE2uxua+QQpLyQJG4FJma0FzDrg4FElqFko8=,tag:z6LWW26XrOibJ8thubyULQ==,type:str]
-#ENC[AES256_GCM,data:ddkmiriCYVYiSnZMI8jojRQnAUZJRUa/SLESQxTZcnPWEA==,iv:J1RhZUpcrMOJSiYmwFOsT14vZy2AsR4QQawXrfDE0sc=,tag:xngC7LbxrfG9gyLArLgu0w==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:eEzxZLMNmecwbEAC+Q==,iv:W+1CwcMbepusIBaEWskCOdbB6oLLgn0wZj4hVGR6fS4=,tag:Egwf5SI/zW4oLlCJyK+vRw==,type:str]
-#ENC[AES256_GCM,data:Qgnw5jVBh8KzL4j+U9Bt8GCp2tnYP8rQUsTJrD25erb7g18AINDGo9/m8YdBksA=,iv:JC89wQLB5Oc9ib9TCrG1azDxj2QXTQWqWdrpGmxMEd4=,tag:aQOQnULj9WlajzikT4ZGtQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:GL58pVEKp0ljECKZAUgbpWJ4D+NZeaz0Jd5WLDqa4g==,iv:X0WhBQwHmUiZr60siiGOltNU2s5osS8uFVC+AR7Vhvc=,tag:qXEYR8kVZrkx6hwNVWl82g==,type:str]
-#ENC[AES256_GCM,data:UOY1TixUuTuN9VaK4wtelbiREtZY3CQMHqL7+gpkfX7qIul7GBldJXHAhUNz7RjGSn0YRcDp9iwEgLKBY0DuO8D+jRpMl4TtEs5pHuNf70DXtA==,iv:qlfXJGxaRGIFY0p8jHnMMb54zvvDBw23RXk++FRpCN4=,tag:FxwxSPe1CsSGSZIL+8PgfA==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:fskcStIkpFnJD+CjS1k8,iv:zKFLAX8TpGr/2TTli7hWeEXZqZO6eDeeaqVhPlxtb3k=,tag:MskJSD/+Gz3qsjmG+ANk6g==,type:str]
-#ENC[AES256_GCM,data:Ac0/l5XUMQl4+ntJfmqSC1TvBqO5p7WPnenOVXsbfO6v,iv:6m7jiU/kt7ieOZJ0sunKXHQel2VAwVJawOYVvibEdzQ=,tag:ICKvWHEtuqCu93inkSXYeQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:fnlo/bdIOTgjZWbdh6Wf,iv:hTWKYfdogaqTbpMnhBDChbuS/eC1Pphex96JaKDuLk4=,tag:GopsVv3jr7ZDXVX+rES2mw==,type:str]
-#ENC[AES256_GCM,data:wKBul0SmzI6iwaszVH/OKhe7rkyCtsuZA4IFwqQTLRyXsdTOefIjhQznkH+G3ZETCD9cLWkTVy5OSTyz7N+5ArsmEXq6VgQCmMRgJh4kEmo=,iv:WjzX/CEYWGV/cmOYW9afaF0kjDXAiMpkk2bM+h/uDTM=,tag:NTylEbgZIKgqBpApZ9rhgQ==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:7W16ylOcTEibklEWh4Kv,iv:CbBM/IPBwMK7a3rRBN+EhhEzCvP69PNeS81uRZWFMsI=,tag:J1vuQxg7mncQgmMgRs0PkA==,type:str]
-#ENC[AES256_GCM,data:ZHjtNxx0rKMlkdiZZUj6Mh7H6dc1ONliwGgYpqeL9rZS6gcz19F7/+71vjptxCMs9rtwqtyo5DvY3rOQ1M94YK+BW54xrkxyL+Bop76lUGUw2N6SXXC8,iv:ub4vRfXP9QZv5o0q2CazvYqo7AtYGAP6vRlcgFwgA6U=,tag:gEw2LUsi4Ptx5u7x7filJA==,type:comment]
-#ENC[AES256_GCM,data:qzi0oqjtzXyG2E1WxjNiYae+oQilveiH4Yf5QFoxBy+auQ3zs/wMLIl+O7qKf2kbJ7cMNhQgGrRmp04gwUCfu/w3OabQWeoK0fvi9f5ghfRnU8E1QqP/0OL+lRp5AldesH7PVTc3fBo/+iuEhoRHgnkjGL2V/+XU2NX5oA==,iv:xpKhwerSuJtI0UVaG1msrZqfiJk/Vji7HGS5oH6DlOw=,tag:XevBWnywVJ+rGTVTO+nSNg==,type:comment]
-#ENC[AES256_GCM,data:ElmXnyDtrHUgEtN83jkAkUeJHVK1VHaRj7ax2n26OV78FzZwdOVGmvRy/AVh1++W5AFx5CZC5jnL2lituhpkDsfYTo/f0Y3i2CGsJVSSgbk=,iv:UNVQ8JfDEzZ2/xq+WzVuuXLg++GZqDk2e1E/DH4l/TY=,tag:QIZL6LK1Hmar52OY9pHzOA==,type:comment]
-#ENC[AES256_GCM,data:w+mthUQEBXKngEI1ZN3LmvL6o9omr5kDTOrXtdHuc0H7B84P0rBNG7d0mjd0jv9pWmgCxOVF,iv:UWtFXfolSDNAz1+lLY+F1mU8gcOSAowleew36kVi8tY=,tag:F6GrP49t0dQKQ3gWTx+uUw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:AGIHD8rHS8FEn66u,iv:DVId1h453t3H5TST/jpeLNjOaEcjNfvLdJKqXo97L0c=,tag:8I0uTOIjGgNkCXU0j4Cj4Q==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3fJI8b2MG5zUTg3vogvGd4w=,iv:eVCXwRSfjyvsaEr4ep13HuQkVw2Eu8jbrklnFX2XQqg=,tag:Bs2cvOgor1iUonzVyVixWw==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:KNcB8KmL1oGjio0cZ6+yshStSyDblPdzBahnCvBTJWA=,iv:2QZjKUp1YMU2lgp/eqf2mOYmK5bUlFBQ8Fa1Yvbig9Y=,tag:WdAL+4S+xhtXHOGM0+3pwA==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:+AeI1zz+7x5J7Nd6qsY3IRTGNtnry5hV253ZuxnGCA6OC2Xu3zVryg==,iv:6pGAZnDoDlob+ndPvyOKxVLu9/12r2jkEA73tv89A4A=,tag:upzNdWwH5ZSnv71kdnM+pg==,type:str]
-#ENC[AES256_GCM,data:WzxakbgNw48OZaZqmnHiofDRIzMhS8JQWqMKvHaFRQhw+6qeMCteKe6q4kt7AoCsSLs+sgJTl8KSySMOHxmNfg==,iv:NtgGxQma70hscxPR/3Fj6LqaFOBTCwYxucupF/adh0A=,tag:zO21FCB0ZD9JUyjaE9FjxA==,type:comment]
-#ENC[AES256_GCM,data:6mrPo1RSawc1gi9Izhu1H4z/NbU4ml7JMXj9TIOn41qFcPmVhuhMShOY7TEZpOorlLvOo82wWXI=,iv:pja/QXkR1WChnhw8yw7esy7fRK2uCj2RWMGovJI0VHA=,tag:xMMqOifKKaZT/l5LWnoZPQ==,type:comment]
-#ENC[AES256_GCM,data:ex3kJF96sqKeehwK+zpdR0RMATVMsLoU6w==,iv:9y9ISKgsP/YnUmEy0oM1v1e5WhI5wvfMxYBhgXH/re8=,tag:vLV+/KOIybedxrVvdJ84Bw==,type:comment]
-#ENC[AES256_GCM,data:pjp/lWjlJ9IFEuVLLGjg47b/4qNb3+0jBADNd7LYpcADK/UYwHSp+8NfiGUwNV7lN31X4GAQvnkyPrAP/HRZPivcswmNgch25C1UzI8=,iv:9t/9RrTqBBJ5T+ryHi7KkCx+wWKMncnRjBtGTtO6Npw=,tag:TrlcUbk2i1oGqWBx2EWgtQ==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:WjE1Bpk39tMGwcnjf2yHldPvh23ZhwlRd84ko6uswBDXL6GPshT6LMPWU2j5RPbO,iv:sprtBDrEWbkTEKqVF7a5C4V8kfldypOpY6DW4NybgCU=,tag:p8PXAK12ytprsJpdC5YyKA==,type:str]
-#ENC[AES256_GCM,data:0yDbSd9MC0GYtIv1lX/lg8LeM/cWdeFTG87J4FTd8FlybyR9z6zEvnXsbGwv7Ij/8qMd8L2JG5TCrTBTjcgBMma1uFLzdE8=,iv:PvdwqJ7/B+p1eeMcezVd6oBrTpKhtSGMNcQA7X2pDGM=,tag:HCB/KHqnqMyfCTS0Xz91og==,type:comment]
-#ENC[AES256_GCM,data:KYjuoBvZY8nFIf7x6AYNCmGnzfTitzFufDWj/vg7rgEH49k9/ob5Y1SDmowEdA7SVRITDb7X,iv:O9QpavYU8gChMvWSAZRbqS5/kFFpahUJnyTwWIcDLUQ=,tag:q/SvplrXPxMdZA6+/9RUJA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:ZtQPDkL+pg==,iv:WpPJXYfoeuAH1NBQH/9bXOLsBmaavyMi+6hJUO5b8RA=,tag:4A/N4quKU28IXsPt7BNxwA==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:zc0ydXCbZf2WlKrEIT74YoGk4ZI=,iv:mGpdPFmrqINFaFpMh6lDkgdRCrGE/OzB6aauHRQgKOc=,tag:sD4g4DJSQD6U52nCpQfznQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:dX55sDQCX+aEXaw=,iv:pz6NbQjbD9JmwiN02aWq7nQIGVdLJlqp8NYiGGld5tk=,tag:iLp54CLAH4vr+6Zq+6DJug==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:2m/qnwx/aNdk5AUwNyh4,iv:E+oZIEMWIVXNqDuYFkQ3pgWUpXQGCQpnvY9rB6brfzw=,tag:ctC3MGWdBGoE3naoMYrtRg==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:QuWYPwp4cvSk+aptp+B0Ml5xeyDRniULVA==,iv:AY5TmNB628pzdiEiEI/+U1zMHZIZblTr2CcWMdFxVos=,tag:AURnr2gyrnLmi4uHvOuCJQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:5czxqw1pXJM+W2fMIPGw7/0lVpeoWBaT,iv:rdkF6EFnXqwJsMPjvNXZ2GzKAl8/LpcCP1Y2dvIQ3W8=,tag:NIrj3i5lePDplFkRPUGO9w==,type:str]
-#ENC[AES256_GCM,data:WCOpHR4pA6p9etdtffXa/GWySq6PY8bdrhjpS7R4/4DeYAT5Uy8=,iv:9dbytTabehAe6oYFHOl+F5u5JWDgO1sxliYVMpBey5E=,tag:VypSr9jNXb9iXRHVkifGgA==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:y5+WB2LqDXgcWVnzZi4Eu1LSARs=,iv:RO9Ux5WwvUs5S9rvFtutJx/PUVSokOzoAPuXom5K0TU=,tag:xF1nI7UP/ZF6xHdtntTCNQ==,type:str]
-#ENC[AES256_GCM,data:eoAzkQPlwvv6swXqdzA=,iv:gOJN8Sy3JQgsd2rYT2D/Pb/zrWNjPjtTnQIrG7PHLVc=,tag:SaAYRkPMtPa1SA9ZwZxNJw==,type:comment]
-PODNET: ENC[AES256_GCM,data:A2IDHE3Gwyh8lKRNnA==,iv:CJW9k0AdVmn79+OyBdpSzMOXQlpiVh4Ow4NkL+q6acE=,tag:g/Sl7xNvEY2Osz0jTT99Hw==,type:str]
-SVCNET: ENC[AES256_GCM,data:4bNcnjztpjrNLtLyaA==,iv:a5prcKn1pYaUdqyeeXY+XvqJuInjGqiFhKKSFj+h1GA=,tag:LgOG10VNhXX4UEFsrwjh/w==,type:str]
+#ENC[AES256_GCM,data:vfkJi6EgqowlTAr9sFvvqd0XLuEVvgEZ9TAK7zm74DIys3ORiU/18F9WdqSeTiTp8lx1MPVArf/wVGp6AqtoErY=,iv:lM0M5Wwu5wJSPqmBrGHYjaGIRjHoFQnyr1o9am90vYY=,tag:gS/5jDVzqzhEgRMuSxZGmw==,type:comment]
+#ENC[AES256_GCM,data:DFns+9c7ZE8lRHAQcCdxNb+7PqBo6pk9bIz8LHjgmTDNEcB7PLNlQqdhk8Q=,iv:yma1yGtj4UkOFw8XH8IMNfcee1zmlfOAcI4OE00RyyE=,tag:1Qpw9nV+KtenhrPV6vNetQ==,type:comment]
+VIP: ENC[AES256_GCM,data:VLwMI514PguU6Ynlfg==,iv:Izzb/Lhyl/9xV8HL+K5UiUNBCid4+3JI2zhS5izQfAU=,tag:/vXW+K0g9z7IYZoChAY6Ew==,type:str]
+#ENC[AES256_GCM,data:PNdR3f+jslC2lqsLX+nOlGYHgXoJyXC8q7OE,iv:TMCsizhNhT1ISsJS6K6WxtaiyAdGuzzxQTicj+m+iQ8=,tag:rBNhfc4tOPjtPjBy+mJinQ==,type:comment]
+#ENC[AES256_GCM,data:OAIwX0CSQdEdJkGMn0IeJKk09SsDFBAdYBzYl/NKAGVeMzlFo09BlrKAJDK2Vqt3uiK4ql2mpCSg8P3IxxhbDTc+dkSfTKfA9XzQWeFt24WBlE5qAoaK7S0=,iv:Ml+8n+wdVNvHa98PV5RJpNFXvx8XnbPMvYNQFiarxpo=,tag:0DvXWeLHWdJMrarnhxYmcw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:3TajKHEW1oaMM81YDkc=,iv:yf0oQDDOjvxsYPu+rzeuIOdXXvQogQw7oUryxF0PEsA=,tag:HgNQi/+HlEAQ9u6Xboz+zA==,type:str]
+#ENC[AES256_GCM,data:5UMflKnG+/F3qV+d6OFDYgc3rY2cFEJwNVWg3Oeh9/mMUw==,iv:ghAWax4IBOmMbd2h/oh8J/eNM5XUao/4n2R/RVMs3Ec=,tag:vY7L3VAqbZtZnnnYh7GulQ==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:ORWFm4Yczvd9lreoFg==,iv:gxgUVsCcnEJPx308LFBkkrdeJupYRlO/VSFLJcP6vxg=,tag:KO2bV/voW6bJomRVUzqRWg==,type:str]
+#ENC[AES256_GCM,data:gpyH/6cbh0UEhQW6P9rnAozXhiIIH/wCijkS4Sq3szUYU1s5dSKqAS07zZfVUfY=,iv:el2QNwmhON6y5t0ppe/1bF5KpRwHFO0gEaf+yoIAQiQ=,tag:1NBTauPqWBJzKhcN3iXjwg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:O1bU3c7N6nfJ2B+V0gtSqKwh3asd+KZ38K19dLokxw==,iv:j52WnTyZZVX/uEjbnFw/2Mknp93qHvV2p5FQYX1gFgw=,tag:JYjul/qlbXDED8xLlT4m3g==,type:str]
+#ENC[AES256_GCM,data:nKuG675AhV/6uaQ++yAKTrb8DdJQchYaA9bUCSZufgPfJZnC65SNMzZILeQ1/jArx3zmnxBNOVFObPr4VsmkGEMXIm8uofHBgzIIHRZ8AfKUMA==,iv:Ca2g7GTzilWyJPP7X2f4BA7ZDL4YWTpXRqzipz+cbvk=,tag:Ndj1eXqTPtXN+P8ulwwBxg==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:PlnO/o4cfe6qrf9krnlR,iv:qYTUhFA8+a/avMNmJzLzcGZdEznOYMTGYi+eFFD1qVE=,tag:gVkAWxC1mnt/Qte9myPKow==,type:str]
+#ENC[AES256_GCM,data:FrQGLAqk7vzZJvS6LEqrf9JJRsdotY5Qfxq1mQ97wHIn,iv:M6LOnP3xQsG4T0OtV1Hu4c7XRA4aT5xrgywC/HEN1jk=,tag:5WTgJWL9p4SL7af3i7qeuA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:ReSR0crpCsSh34M4IT4b,iv:VJpiJ9svByR10XMBx7Od6XIcTJWp37o67SRHA3nn/6Q=,tag:hsRb7N0H3SAOzpTb0aHFVg==,type:str]
+#ENC[AES256_GCM,data:vKzygjOJaVT+mxZQ3dKAFG2qK0H2WOh+ZSzS/7ihu1cG7OYWsavhAsdNgEpM1jMjpf7kA3U9LuQfqii/zmvJuYXncdeUmSn17nXEt9JkPeA=,iv:7TA4OlqVheJNIAXi/4SeCwvFRaL0S3kBYj9uCURi6Jw=,tag:gpvsUGtJpzcOq5tTt6e23Q==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:26JEMSVdL5K8P9pCwA9R,iv:0GR96NB7Ofi67JsY5mV/+KnL4R6jkb9QyNatX4aTB0Y=,tag:fUbQWe8rtprIDVVmcEur4Q==,type:str]
+#ENC[AES256_GCM,data:+KJgi5poPC5tOQpGCcnptRWBbDGHuKK5FyYpZlRZEu7AvhWWEaHjNiNbBx/e4XQpU7Isggbd0/z/PjAs4bakmb2E3OQdeAJtpfNc7yfDjGbgmRp8N914,iv:LeULvm3NjCZWBm/dB1F47QXy3UrHp2l8/enWU7SSK7I=,tag:HvqSf2WlwyijhF1p17ctmA==,type:comment]
+#ENC[AES256_GCM,data:hw1GEOxkZXI+zrK6RHeoI2PY/ydqbc5rXj/fXHwWaYU5dZQISUy/HS3Loi+uteXLE8YaHK++rWXUPFcoUk1+UTdt4+lbudDPYVsXlljipNqLY0SZdFvN0uJ63uW0IeBIQkXd+RxUyyOYpCMTCv2VMH4ybJFF+k64xdQOHQ==,iv:uL/XBSCgfRuxoWzOnWADsytNYSs7TnZBZlvDyhzkiTk=,tag:hngauRUxb513XcSWY9pFpQ==,type:comment]
+#ENC[AES256_GCM,data:kJVznSa//616oxdvnYdnpt8REslcvC3aXdTvjHAym/bZzD20fKZ1sYTjQHsgk/MWRA92VbV0Ot+0J0HllbbwRTeuDjmDJK41i4hoeugjeKk=,iv:K8H6XKtHtnSNk0hj85aq/smcOsUtHdju7wxccWOoaTc=,tag:4Xh1U7JHNNCFM2EWJbthAA==,type:comment]
+#ENC[AES256_GCM,data:XaFR9rinCDsj/uMe4q6NGZIyyp5JJjyPWBOjUGmPyO37LjaqoR2tfGbL2T3uER8YqzkYOhuT,iv:TT0BKIfEwcOQ+q0Vf3s8VtPOm0FJVKncAT3B6US4R9c=,tag:Pj2c5T5eJwkPZVA31KPvVg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:jVAsxJSRlSwdAVhE,iv:DDN7T4bh8XqRCOjSp+w7Gsc+M92jIWDca+Ip/YnB5cU=,tag:z8m5VttaPErAwpLmsIEOjw==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:EKe4QPcBH/svOR0iSACXvA4=,iv:2jHiZAiDXsdDn+VGg71qMFO3eKkWDBzmbLzUt+t6y5k=,tag:1dHHqLHDH/H1BiRhHf8i0A==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:MCbtkG+rXbLKB0QRlETfyxL7d3oAKYCjKyteOjvHMcY=,iv:dbbC672X7er0dvGYuq2SDjW0OcnuxhMpa1Xo/295S/o=,tag:5Bqjg0hjlrndoptGe88Tfw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:zF+Q7z1KzVy9gWHTJmSJNEf01PPIzsB99UC4e9I9Uziy++Sor1d5vg==,iv:Y6005vqw6tIFXGEf/5ruBo3bK5J1mmoVfqCsNl2tOLs=,tag:UYhvS00NoMhgdx360n11DA==,type:str]
+#ENC[AES256_GCM,data:GLrTDYsqX1QpRhGJzXQlO2vQzku2DrWG55b9yAReyyxzc8Fjx1eeWcWw9GsrO4a8kjuJmS2557lA2VbB5kaIYg==,iv:qVZDe9XFkIO4WNh5faVIO4v3kzH1O3PY7VVKRLziO+w=,tag:BYEP+7rWy70kKbJUF/IxUA==,type:comment]
+#ENC[AES256_GCM,data:Vh9s02BkLEbCeFYMtipGvndF0eE40U3jLrUwm1xDMke/V5JWfv1R2moKJm5Os2Xyubp+gtGlgGg=,iv:Gt/I32eJPWQ+BJgxNkbsYhZrQwDJE1O7P3EjKjRCeqw=,tag:FfHiDPZPdadYV/HjbyJrrA==,type:comment]
+#ENC[AES256_GCM,data:frSlz5Qb4uabtddYZ6poVmj03btrwLOJGA==,iv:QJsJtptdszHEoqd/+PjMC8Uw4dOYIQUwxnpHTbs9pF0=,tag:L6mLqoL0CXPdiZfuiCwnXg==,type:comment]
+#ENC[AES256_GCM,data:ttV3OD4rn5/XNs7SYp1rGub1GKlB+Qj9Qt6dnmM3gyBya8+XnBV4NJICIARYkRTevPgc9LWHc8tV/Gg410SGKZWohh04/1NIJ/b1tiM=,iv:wdey41fNOqzAjV8lY8NB21htqwj4NUQcysq7CczCXPk=,tag:HaZ3yfurrUQs+JuGmNbgAw==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:ZlgVMDDUxJdqolaTBBw1vdAjBmpe8OHgjm5q6VUrV7TEWVWv8X21w7DhWNATNF7I,iv:kQI8sNGliuZqOZ478oWSy2YC5ZKIQGfODt8uzASXkfA=,tag:07Ehr61/2oXlSHHEs730Pw==,type:str]
+#ENC[AES256_GCM,data:eQN78I+12xKKpaK6IW4vGdHrdNnssWlfxbOmA30FcYKnmSSSAfZvjZPEsik5Pw8GUA1VtttFdj19JkT54pfyUIn7kGAergg=,iv:QDhVj8bS/z6+4O81Hk8yLzpTL6GA0HzqmxNUcH3W7vw=,tag:WF5v0xw/uQYDJbVGMVJR2Q==,type:comment]
+#ENC[AES256_GCM,data:EMEFtOlF3UGwREl3sMwwROKyQX82SmiXIbm6PfDCAw9QFJEF/yNNAnGsMH5Fvc1EqD9aO4KO,iv:mobk+T9kLfQSoKzjGYF/Ahnglf/jfD06lkhFdgDUxX4=,tag:J/eALs3XwKPeOTCkuNMTgA==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:yYXH2rJo5A==,iv:sjRD1ttukU3SWJq7wXlDvegFutJAzwQLvWz+aMNOytA=,tag:x4dfiK/WT5ueR5taGG4Xwg==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Q10dhlB60tZblHpilrI4jAefKF8=,iv:/Dm9F2wD/ypsX8X6hHMo9LRCaP4mCf91xHJVHNOnsgc=,tag:Ou7o9HZew2gXuGei04KOYQ==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:OGK6oiWxmLI6FQo=,iv:z1I4AnRDGyTMBUgCOOYW+lZw0nj0+1qnk5s4iXwGyWA=,tag:1uzE+A+YkBuHJ9vIzEnmFQ==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:lQFyRhoY0rW1tvfP/au8,iv:0H8U1iS32vURy/R+UqvJpKZh9lbVRm0/Ub8Q5ep4Cx8=,tag:iNx9YlugOeQ1DAVNgn8ZsA==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:oUay78xL1izL+4plEANOpHTIfUqfiZgATw==,iv:LL8IU+YH8nJSUUMozJSQ98To9ftQMXmO5kOA34R8EL4=,tag:ySP8qb2+eAG2VQdKzlXSZg==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:AcDYHaggK9yXd+YfueY9i7fMukJeQixI0/35qsd3sQ==,iv:rbQCDrvoUteG0aoggG53VyrjLgoYa2CpSRcgiKPWgC0=,tag:N687t4RJh++/QqWwHWQeLA==,type:str]
+#ENC[AES256_GCM,data:k6kNwsytFVVJsEQqhIKYuUWh+CI5s3FcA3CRWL32/Lm0d0deQl0=,iv:FkRVizTmx+usdImnxKC3K7DpOr4Cf7GjHgepVam8oMc=,tag:RqNlLJiAOW2qQR2jxxE94A==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:g8ffQkZYjqJcSArheP5A4S4RNhQ=,iv:1ot0Q17vEcT6V28yuqyJjZkf30r4TmWvUtmW12d6yiI=,tag:01KVJNr3M+onQ0zDTeWzJg==,type:str]
+#ENC[AES256_GCM,data:14UM+dQG13vcVoj2UEY=,iv:I0bqwyIgCeiCiziFXUxErFCrdAa0923AkbxqJ+JoeSU=,tag:jKxtGgYsQjZ+2J2a1IkQYQ==,type:comment]
+PODNET: ENC[AES256_GCM,data:1AJO/stEuNOlamofyg==,iv:LuG2mwZEuq3py4k2+Ag8CSllIMNE55afHyeilPZA1zc=,tag:sX+p6HRkd1adgNatD8tp5A==,type:str]
+SVCNET: ENC[AES256_GCM,data:v44K9qnd9WYBceFu+A==,iv:9Jk6VH0wCaVYNLVWFh7If8TI+dt5HuIFtdUgGE8HOHk=,tag:cKDVdVuBtmClx9lJMwQqMA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB2S2E4QUg2dENvdENtTXVP
-            aStGSFpGMi9MTkUzWXBoalZzT3pNQWxRa1FJCjg4YWlmdkllWVBVanhsdnZTK3Ir
-            OERQb0ZZYlM5U28zZE12eTVCYml4b3MKLS0tIEh2NEZndXQzKzZFUSs3Vm9wNkhx
-            bmxnbHlIc2pDKzI0YmtiaW9HUjhMNEEKzZJqQfhbW48lwObAVVpglc8CJZBlts+H
-            pwMP5ajN8xDrPF4XzmuG3f4FofknTEHYn6uZUO0hZ2tswmVXXR/3eg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBjTWlJV0N5SkZZYys3OEdr
+            bjQwZFJoc0VTcDZjc093c1RYOFhYc1AxUEZrClZ4NFhDNlZtQ202ckRsaDVMZGRU
+            QjRqN0EyMXM3SWFlUnZ4UXdBYTlDTVkKLS0tIFh3bXpMQnUrbXN6M3R4U1diRnBr
+            VG1ZeS9xYk9keTdPRk8rd09MaDJTVjAKxlNL2OPn4uMGBLFKdDAsoywsqWjo6W9+
+            Tr+uvyC5I5K3oGCRb+OS9ujzPsfWnHScHKpPbjXDeZjPcczIcRBV5g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T21:21:37Z"
-    mac: ENC[AES256_GCM,data:1QFOAsWVEFryn/3ZFQv52sHfgK3BPuhP/ii3PpQIk4cRn3fjQyUiFBZI6c1+PCVAC8oc7H8LpNsNNyXDNjKjOCjPaJ6Sch2uJAiPpOn5ZzkfMzThzZolXbve3/lR8CbQ/8+RWJTXg9d1OrZ+v+1K76udk70TUZGKfSpTeIIYNs0=,iv:bpkqPMUdkMc0tscbwDl+t6sDsEh04j+OMJjYySxn7bU=,tag:uE6c1Si9qTEvKE9EV7yfeg==,type:str]
+    lastmodified: "2025-01-11T22:33:25Z"
+    mac: ENC[AES256_GCM,data:pmWzMmHrHzZP7r0zgC4Tz2MU8FnDuZkalNNVXI07c3Hg5eYpcJv9AGOy8x14ZAfETvCwF8oYrk/rpud0fr5Y4387Q2DAPMurs9HIxT85rLk5dBYhEn5E9fgL6krLvryFTfay0PTWnuzSvG/2+JesovZcnw1UBYNOZVZeMOdlb2U=,iv:KTXGF/Yg+G2fRzy+nS/Utgam2eDWYIImtxLPcJKHX5Y=,tag:KJ5AOGGXo+y5O8a/aZtNBg==,type:str]
     pgp: []
     version: 3.9.2
