--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:ri03liHySjsQO41U5ftPEGAdY+Ec3IbYGWnY/TYtsctOkaPd9i64XUo2aAk1cgyBXEbKIEmxISjd51AA69YWonk=,iv:RzVC5fMw/lU5qQ3JEVzE/h/tEhYxul4tCFDVvOuSngY=,tag:eGR97032JgyWne0nvC2Q7Q==,type:comment]
-    #ENC[AES256_GCM,data:QWsY2ofuWFHxEDaasiay9fSTMWAZ3Tkc90/ZWn226RrnTeP02zCfq/n8eg0=,iv:DKq8VU+VaynaU2/AVi+htoCQ8ORiq6grpNn0RK4+HyY=,tag:EuumkDRceV1P9ryw+A7+Pw==,type:comment]
-    VIP: ENC[AES256_GCM,data:ozeOzHN12IBaplWZfg==,iv:9d5ao4aovN8aLwgZtGXtaxMWlAmWz6FhTD6DHsjVIys=,tag:pLgT7QC+xnba1S7TAXkI+g==,type:str]
-    #ENC[AES256_GCM,data:/lNQ+yd4r/XKTn61h377RTa9u1iLzmVQHvjd,iv:J2bUdg/L5GwYaks8MR4tx3KoDxm8Z7T8FcX/Niw717k=,tag:DmijC5Fom/NdR4xitMlyGA==,type:comment]
-    #ENC[AES256_GCM,data:+gj587gThRFjvhlid5lnV7+GKbEsAchA8D8ZtbB44A/xZqkloCglJrOX5zgQZJkkhHspHDYwLkevhzsLtLjENverwWwF5aQx6NoVq8Vhgf9Ehbe0VoMwjWc=,iv:mK6FjSqO7v+dldu6LENIsdCGy1pdZg5Co81BE01AICE=,tag:PtqNuvnwH+PcaSYpnPIhUA==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:fKG4XzxaD/Kl8lrEu9o=,iv:H2OcBv57Bw6ANVkkQKpsyXelHKopmQJ8nAN+vB5v3Us=,tag:UyrrgQ5HHv5HiQx2fZYGqA==,type:str]
-    #ENC[AES256_GCM,data:NmWUqZxcYvz/7XhXuvBkYbTCWgaJWQF+jUgv44PBai/4JQ==,iv:v47NlXE3B9Vkffuef1xkP6t2N2g5LS/NTd0+x13uly0=,tag:FZCPoasoCY4x4yB2L9zAPw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:NRWyipsgLTT0JU/M6Q==,iv:hccA03vP4ks/YF6l0i3BMuCHE9ildn5JNiQM7sLzLeY=,tag:4gu8fUB7I6MLVX6H5I5FQg==,type:str]
-    #ENC[AES256_GCM,data:bQn+fbKRUFFTBNuADH1szVh37Xkjq3MvtsMoB7bkMJa4pq7O48nXWRCHzVeQr3M=,iv:bXNikTv7lcNj0mb48qOO6XiE7mgPot+MrcQHxw3pF5I=,tag:I+XwqtHn7ql4x5ReHF+2ow==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:uWcu0+3n6BeCaHdM7AbM/I8GWue+HPmnjhD7fi0MXw==,iv:4XejzVuUFBRSAy5Jaw/qgT6YdbF8GBDRYAfwjvkQD+A=,tag:R4mjOaw1kwIGRKuToGU2ug==,type:str]
-    #ENC[AES256_GCM,data:DzFknGkmZimzef4v7Haneo4jHDJ8VZUwPRVsSQvNhQH38IUy0r/6Fu8CQQ0pw6APmA+8axUyQxkD0O/w6R323NsX4ak6ChUVsIKx+InFXkHIcw==,iv:3ujPwowY10DDcJBHT6Q+rb/KyO1sKtlQR56cKlA/VsE=,tag:f8vlMCKRun5R2JsgQwUVhA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:VhIeqXJHVjyQ2+sPYxLX,iv:LFdNSDiUVenxCTwuYPNkPJiTyqeu9AVzXwrTCYTyWMs=,tag:9NdqBmLx1vVPdEnexPefEw==,type:str]
-    #ENC[AES256_GCM,data:F9xeO6mXadC84AXt9bG0xiQIbl8wUPuDzhqQftRXUI+o,iv:3zz9DbyhS4QBZLvnCygGztTmTuntJkQ5qGg7v7ivcMI=,tag:8fV5AA8OhwzkvbclSk0Huw==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:60JVHaQK+Q1JefMs3fIo,iv:vsgP+OkWExkP6OwJAcQuN/0LK8E7V5Brxm7Ixb/6IEA=,tag:t12NRRv9eQnQ/21A4TNFuw==,type:str]
-    #ENC[AES256_GCM,data:zEhPjNIW+ufhsR3K0LWqwXC7D0aNNJForiYl7xZwYhHR95UtBHv69CkhFbu7VrN1JKgsEWJVYO/TUAdFllQSCXCKesWV1POpvTHlz4ormAg=,iv:M9j66C0uw55zcRWI9bAadw9cAh5xylznBTyzMKaDErc=,tag:aDagom00c9y7FwkDzOTcpg==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:R13x9ZrGPn0lRxIPaqTq,iv:WgNRVWHZRHKr4dDnoj7ipCU9CwJAM/KoVn3OEoiYZEc=,tag:XTRcj8FZYDmF1dhFA6QCrw==,type:str]
-    #ENC[AES256_GCM,data:MGLKRHnd1btspUaQsPH1iPNAXRcSbZp8V/7Ql4ici/5WHfmw5S+W6I8M9A0eOX9RU2uVdws0pyEnJnWFhmzTMPiHv1aRyIsut/KebomuIdw9FOQ3gRZF,iv:keBv6mGKThRniBr/OcrZRTT9esCF95kwKbWXksGAj2Y=,tag:oZ7pkrQDibvSLujFlaPsag==,type:comment]
-    #ENC[AES256_GCM,data:S0ajoGHUE4TeVV/6pHZq0a61+0YW43msmm98uyF513DMMqxRb9wrbM5DBpLJqZjGQkf+tVq7JAfg7VjQkay6/rGalDZhR+jc6NjRPIFD0aZIMi9wuKx3kfD1atyRiDDPlR1HM+oTXAvyo6aCMUMy5sGFCBdJlfloVQKlOA==,iv:3e4Ny6M0mNVDYl6Dd9maTfhM7mTli1+aBmdd7hQhCCs=,tag:3BehaTn/fzaJqx4r7JVb4Q==,type:comment]
-    #ENC[AES256_GCM,data:lixBxa/v9pIux3uWUlh4FCvanyQEw3VI7zuRtdy/IGad7Up4/nRIF3tJF9hxnOWzng7c3W6wvFv12IELUEGmzYgdlTqYYlUt0CkdjZ4eM0U=,iv:llsaZ6yKvc8mEtLT6j/FeTAVO4e7c9V4zDZtENsEZ/s=,tag:MEuSQAArQN8vZwdRMdnF5Q==,type:comment]
-    #ENC[AES256_GCM,data:+UoFiI/Qp+vQFWZOXLi+57myZvmNctg+x38k9cs1p3zzmsDdYHLx2rtkQyCxi6hXaBSrsfNz,iv:bYLcZz61j0qWBPC3WuV2QZnk/KQqJpAWx5rgBylkubE=,tag:LRLnyeya62tXZG9CAGvMAw==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:cC0D4jVFNZhS2NSl,iv:zYrYs2CiIbU1CDFamp04fn0v6aTaQw/awb3i1YvQoHE=,tag:uq1VUSie5VseY1fFrzVpUA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:4MJd89FH4k7ypO0/BH2uIgU=,iv:LN2PolzlpxpZdbZ8q+RYU6YDNyJOcoJvs+4SfYYT3Qs=,tag:CpfFG8KwM2vBsFJzXE4aMg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:9FnDj5Co2RieO97u2erTaC0iZvSievgPBiV6Q8YafiM=,iv:0n4MECa7mFdTKx3H0auRVrSvQEbDmY76y687zP2FfPU=,tag:Y0MwWIs7dR5Bx6CznsvdOQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:ot29QhBNKJugjcmaMTyyjOx3oNtMLdgzJ2X/KXkLPiZJLmTssCX3gw==,iv:JOrZ08oju6Cgl0Fq8I/tYHsHFUyiwlrnNNPI2HTM0Ko=,tag:Fb5ahDRlSk9bc6z6e3oNZA==,type:str]
-    #ENC[AES256_GCM,data:VWLMAq++QXnxRWP7JdBLAk+pNz7JCo8HFWpWnC3rDOYyqCO9C8Gne3O4QpmBZhhVJsaHHeij2gdto0cLV2z6lQ==,iv:yVg4GlhuIflc2Qv0iFWOxEkAhVgZTVnOTAXCAQoYZ1M=,tag:4EXlGtd++9k5VPR3+pamHA==,type:comment]
-    #ENC[AES256_GCM,data:hidjaBCkDBux9dLjY9THjlkcX1QucT6now4KHHyQFBzwq+mCcEo7OaHw79KWQrzZNmOmixmubJc=,iv:JtYbKFH0liPzHQNpDVkZAgtero7KzTJjYHLdxTQoZFw=,tag:hzrhD9dpLNCvCMBoC/njsg==,type:comment]
-    #ENC[AES256_GCM,data:qjGQ0dXWlFgKh52hnojF0ZzDwfc8Ko3yKQ==,iv:DZnh366uUvxbQ8Fr3SYIuLTfh90sBSIeqBeprIzgCTU=,tag:7TyjXN2lfxv7bmx+IJN5Aw==,type:comment]
-    #ENC[AES256_GCM,data:rIXZgJoAQtBQJdxkX1ITKr/CAYKpkenIQaPRk9uJa1lk+VrjeYfC2J7XVnF+cD9zpe+7vs05npmNB7yzw57qdWfrSxK6MFYIvKV45Vs=,iv:aiLlPWmsHNrcGm+8kc2NTAA/LcXXrPNWT6wO1ptPEHE=,tag:UoUEiYpLvfnm82MHRuP/RA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:EN1oC6LcT5watDj5IGyunTrntNAFWHIKbpkctjK/V1StFrwX1m4+xbnuCLW126Xe,iv:+Kd6Yd3tOs4BVsUlP4DYNLYu9dHpB/JJ+/rVcezhw30=,tag:uzBM1GzJF33Wh1ZGtXwW3Q==,type:str]
-    #ENC[AES256_GCM,data:XH+bw3pr9UmZ7fFD/I6M/10aZOh67B+aqUhedBvxeWQPTUnH69bFjQF4SwwPQU+QtOg2zUL0LHRuub7aWMAQ0l2xUZml6E4=,iv:HCrUGycN0BPGE6SeIyulWP18U9tEvJUMXhRAY8hhsAw=,tag:Z13zHIxSK4xOH7+fp4+SiQ==,type:comment]
-    #ENC[AES256_GCM,data:qUDIJLmSXC+/XHmHzvwX9K2MZ5wKAoC+M7CSMkKhCKX3moDckyRZxXnQACVc3sg05Jg72Npa,iv:wuBhArNSzSQenui/40xCojCsDYhKSRCvlw4wchx/pdA=,tag:nwcPO7dKweS6uzgoBhc44g==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:7eilQ3242g==,iv:2pWLuPCJmE9XOK22z5x3eiLopLJZcUDrM7erYF3FTtQ=,tag:l/t7Gd6AYHmldROR50sUEQ==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:KhENvDeKd/A167YRAtsk/VWiyw0=,iv:Kh6EDV/z88W/qJLs/Ux4U2PCT0xlCjatqyQOrUKdJ98=,tag:d6bhYl6NdMaicO23320caA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:vjt0lVJWdy5HZX8=,iv:7k+dqeEXdyWql9Cd5zDkM243cfzIdg7mfOKka41h2CY=,tag:xmGSLDIxUEWwdNzT5nYs7g==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:T0NA9bvD/ahVnnA6WX8q,iv:ERXOxQrwPydMb8mV2EydVny3oeipesMVjfg7YqY80wI=,tag:DZ99fKEFB6NycGwvpRraxw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:lfXFK5dP0/kSVnHapVs8fLilzDuA7JRtRQ==,iv:Ef6kKeiP0QipEjHm93VC1pZxB4LrCIhyrtYlsU/C+OY=,tag:QOliIQMgGn24MRUOaCfkRg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:dEO1fhZ55nxYA0y5Mf7kFsFNNc+JOJMV,iv:Ejhtfkve3q5VFn754RPJPubucCzejUnp1m9qsMryYmk=,tag:8RC8TwLAbX2NtlTxfcZ98w==,type:str]
-    #ENC[AES256_GCM,data:zbNKAKnhEBowf/T8nj6CYZBVuCRra/DuqplrNyx0luGUneEf7Is=,iv:exWF2ZE9aJYUMEYjdwHR3+1gHzWAuAfkEZmDLMoG5dI=,tag:K4cEtYDt0OxQkNhabPyHxw==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:0yjfUNc5lYHvKkptNdgLdhMk1WQ=,iv:i7hMlg4JLcM2cn80ro30xpuK1G5mtKqiPXqgbBoDTwk=,tag:rNod/NccQ5xHpN10pxgWXA==,type:str]
-    #ENC[AES256_GCM,data:NqnCY5Jg+vdL5+5zQYw=,iv:HqGNCw+pahnL8xESOgZMClFn70NoucVoZuslVpcejgo=,tag:01hR8UUxx/4ZAZ8t0sXy1w==,type:comment]
-    PODNET: ENC[AES256_GCM,data:vthsAbQIZqgKJ10fLA==,iv:siEgZMWn5QqPOgvGGWwAJmLDwlotck18y397bwpbPBA=,tag:j/ZsJnNgnH9utDtUvJmQVg==,type:str]
-    SVCNET: ENC[AES256_GCM,data:/+sUeEcmu0wlXgpC+w==,iv:HG7+gic1jF4pSHMiVfuYqTtcDXitzYwaFzQlv1CwEbo=,tag:Snsk4HxdAE/xUQlZLYxirQ==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:UFmnVw==,iv:Sav4tetQQSGxGehr5/AXFyM7vov687VRiu8Cm9MIHIU=,tag:wvZRXJ43zBZn9q1Q5ktxoA==,type:str]
+    #ENC[AES256_GCM,data:QQbxHCAEWkJl+xj2vzd+2wU3eJ1PX5oCd2FxZUebCfxjJ4os+jUYRDCEkp2WswjBFlkt5SHT/iIQ01MsX7vkHQo=,iv:h20PBrCjqfud+0N9zDRUEhXFMqH14ViXUy9o2WOGCBY=,tag:MaX1GaBYJXEb+C7WfttMcA==,type:comment]
+    #ENC[AES256_GCM,data:xu6dWWcoHsA3Y2TjSCcN9Cvdg8i0ZLUOh3POabl7QEiJA2a7zmQk6od9l9U=,iv:9hgkba8lvKVugKNl5rRLZGSgm+kOCN+nu37NzuYzJkY=,tag:E1EBQfgVf/QBvbHuxGdvrA==,type:comment]
+    VIP: ENC[AES256_GCM,data:i5vfdW0y6p42esJoiA==,iv:cQsNPmk2mMFRMHTqa8UPQvez4pBSpBAHCVkYFb2KRPE=,tag:eXl84jwpAjzZpJKB43SpWA==,type:str]
+    #ENC[AES256_GCM,data:fiGUhBleEHNUxjy3a+MBgEdfAmKU+6Rc+U5e,iv:839KUGOTTsil3MHdwsxHCT5SUieNA2mkNi6d8HTAdKk=,tag:5Ewr9CuB026ULAQwgWh9xw==,type:comment]
+    #ENC[AES256_GCM,data:SeSXCA7xk0Qt591GGhl0tolNCRSthnRRTfKq0nyh4uE/vw4KBTrsLyEcJRocnFmucw0VS4xs/B97LJxZOMKyFc5h5vuVI8Oj8sSja8ubELC3UHDfoLkhU+Y=,iv:VobHBVZC4Q1cycu/NP8rHq8zq4RRvT+2RsWW0wL74tA=,tag:cTpwwi3vEWkNTrPxtIj12g==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:70s8DPMsIQsmtdJR/yM=,iv:/mW/cldIunLfLY6SHIpVXkXClIIrq918ZvSe2DwWQU0=,tag:efDTX4NkaXJiKwLhM7A+7w==,type:str]
+    #ENC[AES256_GCM,data:w5MfgstvaAilI6q7FO9lOoDT7WM51uPhxQCP6yAf5u6WPA==,iv:ZC+jB/WPnGCTGocapm/YtAVsnJffrjWwjbLy2hBUfzY=,tag:r6Z7cTN2M3O2I4Hysg9ePA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:VA23wgS7WrBwaojOOA==,iv:JikXkMdRNo8HtzopZuCSZg2Ia+QKYS3lvEjQiwWt4q0=,tag:iBuMcFZs3ztRS0oySjMrIA==,type:str]
+    #ENC[AES256_GCM,data:3RViCjMiGxVTm6iR2ADi7BXkLgovB1a1BwwFyraEony5ZQ+qd9mRozpx8Bsok/Y=,iv:Qt5+3G32BpDXGcLPRJE56p/fSmeZbP5pqi0JrC2L/u8=,tag:jDzCVdVO2y1a7X7MQH4ckg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:svgMKs7/qnLqVhxjrb3gM5+tZUeS2Fj0dy1s7AiFEQ==,iv:GK3VVrNuR7yzm9VvgSN9LzIsR2Ka0lDBs/L+MRpQWFU=,tag:XVYuymwPUudjKVdaeVarww==,type:str]
+    #ENC[AES256_GCM,data:i3Tz0RY5ucTt13cg4obR0YXGdGlaAqr9M0vgOEkmQp/2viPe5TKWRntLg6P51x0YfZtJ5j14HlxjwJ+DFomMp5gGW+Vb2fyHJgJ/V+cBwCralw==,iv:XSP6aAUK36UNLD8lG6xex01OytSgQG6cYAWH4SFNlfc=,tag:KFrMpYUNHofy8N+Z+Gh+dw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:naDUaXJRPkuDAeWwP2PB,iv:x0FasIsK9A7gJmGq1oQV7/sCopbtIrgBy6TbSebgT3s=,tag:PxVuZffDbC1/RNJ/oYG5iA==,type:str]
+    #ENC[AES256_GCM,data:klIVMBx19+L1i/M1A6aNe8YjRjpRTZCFkUdbsHfrbzvP,iv:5KQ5YV3sZp+uDdkJ2e55yeKD7GoKnXdvBqDA030+J6I=,tag:tkr1DuUBTD1XAdsqJIJ5Cw==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:VotJ3SAkydzBkjlHizeA,iv:KQdEgFvBBw/VUpBAmnA/eyXL0m9902aD1mMYuUcVRmk=,tag:Apc4SToTA6wc4dG3TPeEpg==,type:str]
+    #ENC[AES256_GCM,data:I/n2+o8AYnVSNFM2SAKAqx+gx2xfIPyRI2dV7ie7tnYnRH9FRQvGfScYnyIJrI9N4DrOtggV+VT4BEZSNTeNVz8GFpUAHsDCRkeqUF8cZVA=,iv:b2HkS/txPtE9omIT/hc+JoteTHqW7u/SwbHXPNGuV30=,tag:NTUSQFRx00afXb8YaWrLAw==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:jatJKCV/AUnZ1FNxrhmd,iv:Gq3OfsCaFr/N9hWj6tRdltZhoDJ5Boa7HJLwOgyz5KE=,tag:RscKWGg/jgIv3E17S3xjAg==,type:str]
+    #ENC[AES256_GCM,data:ezPGQc8zlkNnnU3DiEjhC4HS3RCK+D5jg/ggIRCz2uio/csK6NDY/3mK1tUQmcZPfga93Ds0H+yqAXiPgbFceKNMI+ehpb6IZ5y/01Rn/4YPUo2kmlNh,iv:cm5V+NT29V7Wgv03o0hCY10t0doIdyigOUbNZJh7jY8=,tag:jp65Yyui3nr/zVYYq9J0LA==,type:comment]
+    #ENC[AES256_GCM,data:qej8FRH8F3AS6084bc1vl0S4lKro1ujVnOxQUOnPrgBJQ54ZNRt15QPIvK7lG/ivigwNmvZdDdCUawCxGXkr3siZ9gX67nJFyqK+wxCIBHXj8yb/4Zztm7I6/kog5NBaFJEnMeHOpbazNyj8B/LN88oHun08ZAokfk2D1w==,iv:fAl12wKWqZsHypYpN5TH4s2M+QgFTVWPM8WEyAnZl2Y=,tag:OzmOOLxnQzA1JW23Aw3Svg==,type:comment]
+    #ENC[AES256_GCM,data:O47M2r49uWQolPFA5gku8QsCnP4gTnOGUhTx8Q0TMZv5bsd/0jpHpWd4eZZS0UoiR60ZWHssl3k42BXSSx+5eUhOc66Iw5kcIp4lhX6CQXA=,iv:91qlAwRoovNNI1ZUFeNMl46j6rcOFbpU6ev00gSaK7Y=,tag:XkpVmFT49Frl8dZKtY3K4Q==,type:comment]
+    #ENC[AES256_GCM,data:f1buac0wpkKugVDeQKYYEk7gO3+eAAZGLXjaJxp3B2dK+v8ITrn7cvXwEJJtQiWR4WYeY+as,iv:dV4quiP2pPQTvRhYr1OTid5/uaSbaFDIggpY/MjueuY=,tag:3+9d49urSgDNidX/eH4mfw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:uqKuCsE3oYesjAQU,iv:V/q3X71kN+T/7n5G2JnPhU/NGBYDTDkDcvvbpV3I1T8=,tag:2h3RihbjuOkHSryZPzCopw==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ccWjhlxGPm3WgZ2eteCVIHw=,iv:kxqJUDnS+w1X0IOPQnTqD5M2+zO7vhh5oJ7QCk0sAFU=,tag:IHISkHio3YkNU2e0r+25Mg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:CqDAAbmbcLgMO5KS+/HxYfjGoado4rqU8sySCdKLHs8=,iv:NzCNZIpYwJ3jdwTucRx/DJR72oqEYsFbx8L3UVazit4=,tag:3lMcsyDL2/6zNQ5ltSljOQ==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:KfemOZkoOq9tR8NklSD8D/bna3jAE/clcDyU2TmhBcOiUzgKy6CgAw==,iv:fUJXQOYRnGfC0NaRafkJyrKh25GqE3PlQL7eIxJhTAs=,tag:0NA79LA6wyFWK8eavFGeNQ==,type:str]
+    #ENC[AES256_GCM,data:5xorkXY9XBs1UKYZZsrzqH+tBI81oubE7kAV+WolwdXXwV+qu2yUEYmbMQkg3EAxd0a2nzkexLKomh7z9jEZSQ==,iv:OLr5siLNq/V2lkmmKldf6DhI1afx28mbaJSzwH+yofU=,tag:lZCRwYtYQYDWWfy248WqQQ==,type:comment]
+    #ENC[AES256_GCM,data:1U60ilyJ1GCWedQIhmZjaDHmQUC5ijJwMuc9ivp8M4aAg+FvkuwuAAkfoQ1NHsZy2Tih+W/we9w=,iv:dwUNuGykukBNlxw8HViGOfHCCc7QNixUHyTxoU6qdp4=,tag:Ssai1SgyVYO2XZx8gGig7A==,type:comment]
+    #ENC[AES256_GCM,data:NozoJXE4awrTVF+aQgHAg1ZMCOSfhpoHMA==,iv:0COiXrJeji8DdlEWTGWqq8ssvTc/d9sYZ14j0rwCBFo=,tag:PSvbBSBKjV/JpWy5GVmU/w==,type:comment]
+    #ENC[AES256_GCM,data:5DKy+yHTi9uYyNc9dTeAISK5gAO1RLrl0pAAUudim4AT0XePFyukvmel+RdzLvxC1SxIbVYVLovPxVKjiThsde+y8me7RDtIlNHtB4Y=,iv:DH3qj8swpPDaojrqTwYSckOELkfRI16p4P0C0F9y1FA=,tag:qT2wMFTo8MxZ2CAPRHAenw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:RfFxWgTDaRtPfzf8gbuIHfyvWcLU8Gv8BhuHpEiqt0zmX9tJZZ+fhG/x1KF7lqPA,iv:fkjgoZFMJEnsUF5DH9CCQ+6Xqnd+oTrklHeD+7m6O78=,tag:q0fZ9XEVCcIf10K3YsWTjA==,type:str]
+    #ENC[AES256_GCM,data:SOvmUwm4mvAmpE+lnvCrGQb+9BwRGpWKCU18xtiM/11ZLr12cLomL9kfWjM1lJclaB2xP1q7rsGpmOZcfwmwSMA2Aq0Il1s=,iv:eG09uy36+ivScQb2ckWOYTNXJfDY+ytp9X69+3J2XAo=,tag:ZGIf9BAS3V9ov/EiestVNg==,type:comment]
+    #ENC[AES256_GCM,data:j3gDtqbVAA4wYX7CW2SVbXP+TwJANnhe7q3nS7ZHNuyh4jzMStMBls2uPlw+qxSkOOi7eWfE,iv:NY0QPRF2XASlHkHsFUvhbvhPUfk64YBrs/fpycyUIPg=,tag:DAPcn9yRjlzm4H7UjgB/8A==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:yJeqeW5Rlg==,iv:0zh3CXic2HyaJup5lyTl3kTGcepPxvJbCKv6BIroHn8=,tag:mS6kRKEpyGdfo6DnMgMRNQ==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:trgI14qZDIHEtRZfS6l3tQkdVWI=,iv:xkGRD+oQm7dBRJuVZ5jc9Eb84SIszZ+UtriO5+7oBXc=,tag:9hgmhG4bcEaz3wghiFsfaQ==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:W+CV8S6tTc4mkjo=,iv:A6C51UImiYsNEHX7nvv1eVEDetX10/ei2tq3XYsQQ6k=,tag:xwKioNGPBP17D5551Y6/jw==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:9GKUFG5gkTVIINv3ucTo,iv:YZC59pDYxDPNr/uonJK43xBtQPiCKlyvko1zuhSUtFk=,tag:a+D0BVqy2HJ0txWvVxOm2A==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:TtC2w6jCT4UaMu0hayrLp8yinhVCDJl6RA==,iv:tVxltMHgw0+o4qoxHlToFg+U5ukCF6lp2TTWMajDphk=,tag:Eir69oUzAVSnv3Q6qdwMIA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JMdJEwFniwXtr4Q8ED4+ea3J2vAe3qVsBmax7m/ubg==,iv:omWZyKK9ruSZcNoi/vpuv4x4j9krY4jYfu4Ap2G8nVQ=,tag:09h7vn4UF4AC3c/KCXIAPQ==,type:str]
+    #ENC[AES256_GCM,data:kSwvgTn7YVLCnFpYCm/nks/+01SvmgfmBbxO/ux1wJH4qeJ6Enk=,iv:Z3u8bfQlxvgiH+aW8SYvPn8KuSl3j0Gwnp6iau5ckaQ=,tag:N0U7MLpEcA/gve+dqZULQA==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:7QDZZDGn9ZOoE5SQ5nGbRtxMHmo=,iv:a/0fuyfza0asMYUIYeqAm8UlRA0nFxsd/itnIJ4NSOY=,tag:R/H9pTvWCch8ulWN7yx/3Q==,type:str]
+    #ENC[AES256_GCM,data:/vdrw7GUHIfDNkN9yUo=,iv:6gJdnEpscgtC0yKNAZslqoP45SWR1+tn13Dz01nA2oA=,tag:2NIdO+Pg5VblDp6JB5QXiw==,type:comment]
+    PODNET: ENC[AES256_GCM,data:nZf0Gp9HvRQ77mbLuQ==,iv:vTn8LDP0bEydaBDsR7SbIcZnJqULlic+SQslYWdCKE4=,tag:vnrPrwytn3voVBBH0SVAYw==,type:str]
+    SVCNET: ENC[AES256_GCM,data:fd3SN4skOGQsajI6Qw==,iv:Q4PkxyKzcD1sDrZnScccTjhazBp+EgSWrDhBTPOubZ4=,tag:5DnMSQEHmXlF5kXSXPqz9Q==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:98cvGQ==,iv:x7fVzsaZicWwNZRuVkLAK6jHxpb+XQgHqukL5VlZKgo=,tag:1geulIPKhYhv3+qQeqA79A==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0WFpWM2ZMKzFac3JxbS9S
-            SHpIeFhFbEJVdnhiZ2JOcVJ0RjVEcUNvdXpNCnhPSmsrbktkaXpMZitDN1RrWGhO
-            ZmJOdjlzZnRMeTdCY05XMTd2eEFENDAKLS0tIDBLYVpiR1hsODJ0WXgzNTlUUXBZ
-            bzJPc285ZDBOWWZVNHI2N1RzRWhnU00KWMbE2JV/IddoglWo/2+TNKL7ERxHDYQW
-            Kzbu8N12tdZ2293JOR2CITNT639oV0aDhPwOxxLfygWKwQvzV/DjEQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaaFVhcnpqMmcvNGdNNFFV
+            SDI4Nzd4eVlNTlpuOFpIRDYxMGUyaTBSRVJVCnFpcmJIR0tSeGt0WmFpQk00N0tj
+            Wm4ycExuNGNOa09mQ0NQZmcxVFpGWVEKLS0tIHZSOWFOM3FibEZHL2FJVHJWVllC
+            clQwbkRWUlpBc3M5M0lTWndlaG5iU2cKmi03pWzgRCIKWXtslXU2X9BPU4x5i7co
+            iG7WJQwcKaXWNkW6ELsCO7szaol0y96qO++utKI5kGakmLN/fxe1oA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T21:21:37Z"
-    mac: ENC[AES256_GCM,data:TvnNh5x/mf4rvrCfECTkW2W7l0rDrgyKvCmu6PKdprdoRFLRdCDdFdrs6zUPZztztDZaoL2HvnZbhrkejGrEd73j16xtDMcsn6sPQ4m4Bd3E89i5Wj65DacrCTH3BfckKqkQZcxVfNZOEmkLZA9/HMTBidgL+cu6h6+9abC8M8E=,iv:HQ/g8iy2FBjCH6U6SpZA74e0aMgLz72L+wmISF9lZsg=,tag:vGMs8e80T4P2DHWIEQaWHg==,type:str]
+    lastmodified: "2025-01-11T22:33:25Z"
+    mac: ENC[AES256_GCM,data:9psZlC9mndNXP06/7g/kAa+sb5hNCa+1WBRKdJpINlT+BCiI9JgGIR3oH1euX8VT7DzNTl3GzBavVzjPYyfLTsPbvszbPbHtVLQeegQtwJ4W7aREQYeGBmzMZ0Uwa7PzvLqrSdErZn20xGHa6uswhsP/WHY1MuOB2TZwL8AX8LU=,iv:E+BFXAs3pBEnghbUHGcH3EkE2DCDUcQ8KOtszqjm5EY=,tag:blA9EZn6eQrx0ptgbE23HA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
